--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ gunicorn==19.7.1
 dj-database-url==0.4.2
 psycopg2==2.7.1
 whitenoise==3.3.0
+
 Django==1.11.3
 pillow
-
+djangorestframework
 reportlab
